# fontconfig

./: configure.ac
doc/: Makefile.am
fc-cache/: Makefile.am
fc-case/: Makefile.am
fc-cat/: Makefile.am
fc-glyphname/: Makefile.am
fc-lang/: Makefile.am
fc-list/: Makefile.am
fc-match/: Makefile.am
fc-pattern/: Makefile.am
fc-query/: Makefile.am
fc-scan/: Makefile.am
fontconfig/: fontconfig.h
msvcport/: CMakeLists.txt  config.h  dirent.h  fontconfig.pc.in  msvcport.h  msvcport_private.c  msvcport_private.h
src/: Makefile.am  fcarch.c  fcatomic.c  fccache.c  fccfg.c  fccharset.c  fcdbg.c  fcdefault.c  fcdir.c  fcformat.c  fcfreetype.c  fcfs.c  fcinit.c  fcint.h  fclang.c  fclist.c  fcmatch.c  fcmatrix.c  fcname.c  fcobjs.c  fcpat.c  fcstat.c  fcstr.c  fcxml.c
test/: Makefile.am
